--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.1.0",
-    "@react-navigation/native": "^7.0.14",
-    "@react-navigation/stack": "^7.1.1",
-    "@reduxjs/toolkit": "^2.5.1",
-    "react-native-safe-area-context": "^5.1.0",
-    "react-native-screens": "^4.5.0",
-    "react-redux": "^9.2.0",
-    "redux": "^5.0.1"
+    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@reduxjs/toolkit": "^2.6.0",
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-reanimated": "^1.13.4",
+    "react-native-screens": "^4.9.1",
+    "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^2.10.4",
+    "react-navigation-tabs": "^2.11.2"
   }
 }
